
Changelog
=========

2019.1.0 (unreleased)
---------------------

- Remove plonetheme.teamraum upgradesteps. [phgross]
- Bump docxcompose to 1.0.0a15 for bugfixes. [deiferni]
- Set changed date on ObjectAdded instead of ObjectCreatedEvent. [phgross]
- Translate z3c.formwidget.query (nothing). [njohner]
- Add buttons for managers to get the toc json for meeting periods. [njohner]
- Add absent members to the meeting protocolData. [njohner]
- Add description field to paragraph add form. [njohner]
- Add support for simple language codes in request language negotiation [lgraf]
- Invalidate cached zip export app. [deiferni]
- Fixed attaching mails to mail via Office Connector. [Rotonen]
- Fix typo in favorite error message. [njohner]
- Only display .docx files as possible proposal documents. [Rotonen]
- Render mail descriptions as intelligent text on the Bumblebee overlay. [Rotonen]
- Render mail descriptions as intelligent text on the mail overview. [Rotonen]
- Render document descriptions as intelligent text on the Bumblebee overlay. [Rotonen]
- Render document descriptions as intelligent text on the document overview. [Rotonen]
- Remove the now-unnecessary js files from the favorites template. [Rotonen]


2018.5.5 (2018-12-10)
---------------------

- Fix task revoking permissions on close/reassign. [phgross]
- Fix an issue with missing zip after concurrent demand callback requests. [deiferni]


2018.5.4 (2018-12-06)
---------------------

- Add missing changed index to solr and fix tabbedview helper fallback. [phgross]
- Bump docxcompose to 1.0.0a14 for better handling of referenced parts. [deiferni]
- Fix filesize, filename and file extension upgradestep for deployments using solr. [phgross]
- Fix an issue with meeting template titles. [deiferni]


2018.5.3 (2018-11-29)
---------------------

- Bump ftw.bumblebee to 3.7.1 to get fix to avoid calculating all indexed on document update. [lgraf]


2018.5.2 (2018-11-28)
---------------------
